🔧 Fix GitHub Actions trigger to prevent unnecessary runs
- Change from 'charts/**/Chart.yaml' to 'charts/*/Chart.yaml' for more specific matching
- Add values.yaml to trigger paths for completeness
- Should prevent workflow from running on non-chart changes

✅ Workflow should now only run when actual chart files are modified

--- a/.github/workflows/chart-release.yml
+++ b/.github/workflows/chart-release.yml
@@ -3,7 +3,8 @@ name: Chart Release and Auto-Update
 on:
   push:
     paths:
-      - 'charts/**/Chart.yaml'
+      - 'charts/*/Chart.yaml'
+      - 'charts/*/values.yaml'
     branches:
       - main
       - charts-for-ai-demo-apps
