--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,12 +6,12 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.565648981Z"
+    created: "2025-09-25T13:06:02.096398-07:00"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
       integrated security monitoring.
-    digest: c2b3993d3047e74136da5bf28e5640b39c592f1648c2f1a043adff7169f7a2bd
+    digest: 32b1ba4e64826f4404f7749271889d8c4255a1ffbde27fb01ebe880032181b53
     home: https://www.suse.com/products/ai/
     icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
     keywords:
@@ -33,8 +33,8 @@ entries:
     - https://github.com/wiredquill/ai-demos
     type: application
     urls:
-    - ai-compare-0.1.1.tgz
-    version: 0.1.1
+    - ai-compare-0.1.4.tgz
+    version: 0.1.4
   ai-compare-opentelemetry:
   - annotations:
       category: AI/ML
@@ -43,12 +43,12 @@ entries:
       opentelemetry.io/instrumented: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.566918607Z"
+    created: "2025-09-25T13:06:02.097225-07:00"
     description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
       AI response comparison platform. Features comprehensive GenAI telemetry, token-level
       cost tracking, model performance monitoring, and deep integration with SUSE
       Observability.
-    digest: 2d42f3669a32d7b682ac33804df12e44845ed01c04b6b96e032d55a778ffc376
+    digest: 121a1954b3193ea57e980fe11d9a4c753138d00e994dad32dce74ba70fee0a78
     home: https://www.suse.com/products/ai/
     icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
     keywords:
@@ -74,8 +74,8 @@ entries:
     - https://github.com/wiredquill/ai-demos
     type: application
     urls:
-    - ai-compare-opentelemetry-0.1.2.tgz
-    version: 0.1.2
+    - ai-compare-opentelemetry-0.1.4.tgz
+    version: 0.1.4
   ai-compare-suse:
   - annotations:
       category: AI/ML
@@ -84,12 +84,12 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.569030669Z"
+    created: "2025-09-25T13:06:02.098963-07:00"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
       stack compatibility.
-    digest: 5036cca5b731b14a5b25bbc0c4000938088f0cb4ce48b04f5fd8178659190580
+    digest: 30b26f2379508e57c6162b17f213e75abbc70f1708fb3f73cf25d3281ec6d272
     home: https://www.suse.com/products/ai/
     icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
     keywords:
@@ -114,47 +114,10 @@ entries:
     urls:
     - ai-compare-suse-0.1.4.tgz
     version: 0.1.4
-  - annotations:
-      category: AI/ML
-      licenses: MIT
-      suse.com/bci-images: "true"
-      suse.com/certified: "true"
-    apiVersion: v2
-    appVersion: latest
-    created: "2025-09-25T15:13:52.567990623Z"
-    description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
-      platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
-      Observability integration, NeuVector security demos, and full SUSE cloud-native
-      stack compatibility.
-    digest: 75febfa7107b3d466eb934a7f53ab8a618fc942d44a94c19afde66f823cd7711
-    home: https://www.suse.com/products/ai/
-    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
-    keywords:
-    - ai
-    - llm
-    - ollama
-    - machine-learning
-    - suse
-    - enterprise
-    - observability
-    - neuvector
-    - security
-    - demo
-    - bci
-    maintainers:
-    - email: ai-team@suse.com
-      name: SUSE AI Team
-    name: ai-compare-suse
-    sources:
-    - https://github.com/wiredquill/ai-demos
-    type: application
-    urls:
-    - ai-compare-suse-0.1.0.tgz
-    version: 0.1.0
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.591400466Z"
+    created: "2025-09-25T13:06:02.118958-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -185,7 +148,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.588414528Z"
+    created: "2025-09-25T13:06:02.116106-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -216,7 +179,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.584681978Z"
+    created: "2025-09-25T13:06:02.11304-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -247,7 +210,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.582811508Z"
+    created: "2025-09-25T13:06:02.111287-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -278,7 +241,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.580257537Z"
+    created: "2025-09-25T13:06:02.109187-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -309,7 +272,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.594101881Z"
+    created: "2025-09-25T13:06:02.120643-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -340,7 +303,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.578402034Z"
+    created: "2025-09-25T13:06:02.107194-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -371,7 +334,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.576477853Z"
+    created: "2025-09-25T13:06:02.105321-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -402,7 +365,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.573561511Z"
+    created: "2025-09-25T13:06:02.103112-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -433,7 +396,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:13:52.571649844Z"
+    created: "2025-09-25T13:06:02.101347-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -462,4 +425,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-25T15:13:52.56441398Z"
+generated: "2025-09-25T13:06:02.094863-07:00"
