--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,7 +6,41 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.096398-07:00"
+    created: "2025-09-25T22:55:58.064998832Z"
+    description: SUSE AI Compare - Enterprise AI response comparison platform with
+      comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
+      chat interface. Built with SUSE-hardened container images, GPU support, and
+      integrated security monitoring.
+    digest: af63a238d8df8e60e50ecef25379ad349279946176c822f000741b98822b13c2
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - demo
+    - comparison
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: ai-compare
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - ai-compare-0.1.5.tgz
+    version: 0.1.5
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-25T22:55:58.063997724Z"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -43,7 +77,7 @@ entries:
       opentelemetry.io/instrumented: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.097225-07:00"
+    created: "2025-09-25T22:55:58.066215483Z"
     description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
       AI response comparison platform. Features comprehensive GenAI telemetry, token-level
       cost tracking, model performance monitoring, and deep integration with SUSE
@@ -84,7 +118,7 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.098963-07:00"
+    created: "2025-09-25T22:55:58.067267066Z"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
@@ -117,7 +151,7 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.118958-07:00"
+    created: "2025-09-25T22:55:58.090215681Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -148,7 +182,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.116106-07:00"
+    created: "2025-09-25T22:55:58.087028541Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -179,7 +213,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.11304-07:00"
+    created: "2025-09-25T22:55:58.083460974Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -210,7 +244,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.111287-07:00"
+    created: "2025-09-25T22:55:58.081594399Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -241,7 +275,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.109187-07:00"
+    created: "2025-09-25T22:55:58.078987028Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -272,7 +306,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.120643-07:00"
+    created: "2025-09-25T22:55:58.093181296Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -303,7 +337,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.107194-07:00"
+    created: "2025-09-25T22:55:58.07715573Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -334,7 +368,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.105321-07:00"
+    created: "2025-09-25T22:55:58.075273065Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -365,7 +399,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.103112-07:00"
+    created: "2025-09-25T22:55:58.072184946Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -396,7 +430,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T13:06:02.101347-07:00"
+    created: "2025-09-25T22:55:58.070249343Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -425,4 +459,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-25T13:06:02.094863-07:00"
+generated: "2025-09-25T22:55:58.062792544Z"
