🔧 Sync NeuVector configuration fixes from ai-demos - Fix questions.yaml defaults to match values.yaml (both now default: false) - Add missing NeuVector question to ai-compare chart - Resolves installation errors when NeuVector/SUSE Security is enabled - Synced from ai-demos source repository

--- a/charts/ai-compare-suse/questions.yaml
+++ b/charts/ai-compare-suse/questions.yaml
@@ -56,7 +56,7 @@ questions:
   label: "Enable SUSE Security (NeuVector)"
   description: "Deploy NeuVector DLP sensors for credit card and SSN detection demos. Uses declarative YAML configuration."
   type: "boolean"
-  default: true
+  default: false
 
 # Ollama Deployment Configuration
 - variable: ollama.models[0]
