--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,7 +6,41 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.411442-07:00"
+    created: "2025-09-26T08:10:03.588828-07:00"
+    description: SUSE AI Compare - Enterprise AI response comparison platform with
+      comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
+      chat interface. Built with SUSE-hardened container images, GPU support, and
+      integrated security monitoring.
+    digest: c1b225a1859d05c9072f8994e356be8ae59a4dc6804cf87ad2922d5f3afdcc98
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - demo
+    - comparison
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: ai-compare
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - ai-compare-0.1.348.tgz
+    version: 0.1.348
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-26T08:10:03.590657-07:00"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -43,7 +77,47 @@ entries:
       opentelemetry.io/instrumented: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.41301-07:00"
+    created: "2025-09-26T08:10:03.591607-07:00"
+    description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
+      AI response comparison platform. Features comprehensive GenAI telemetry, token-level
+      cost tracking, model performance monitoring, and deep integration with SUSE
+      Observability.
+    digest: a2986352c08e2aaabc126d243dc86ab7ab3946bf407c4caa9823506dfbae39d6
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - telemetry
+    - monitoring
+    - genai
+    - tokens
+    - cost-tracking
+    - demo
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: ai-compare-opentelemetry
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - ai-compare-opentelemetry-0.1.348.tgz
+    version: 0.1.348
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+      observability.suse.com/compatible: "true"
+      opentelemetry.io/instrumented: "true"
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-26T08:10:03.593082-07:00"
     description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
       AI response comparison platform. Features comprehensive GenAI telemetry, token-level
       cost tracking, model performance monitoring, and deep integration with SUSE
@@ -84,7 +158,44 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.414025-07:00"
+    created: "2025-09-26T08:10:03.594141-07:00"
+    description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
+      platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
+      Observability integration, NeuVector security demos, and full SUSE cloud-native
+      stack compatibility.
+    digest: 131c136c915237e2b1cc7880f315e664a83b674de39893e72bf4f00136db7f3a
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - suse
+    - enterprise
+    - observability
+    - neuvector
+    - security
+    - demo
+    - bci
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: ai-compare-suse
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - ai-compare-suse-0.1.348.tgz
+    version: 0.1.348
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+      suse.com/bci-images: "true"
+      suse.com/certified: "true"
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-26T08:10:03.595249-07:00"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
@@ -117,7 +228,7 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.434839-07:00"
+    created: "2025-09-26T08:10:03.618826-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -148,7 +259,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.431372-07:00"
+    created: "2025-09-26T08:10:03.615755-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -179,7 +290,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.42857-07:00"
+    created: "2025-09-26T08:10:03.612304-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -210,7 +321,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.426203-07:00"
+    created: "2025-09-26T08:10:03.609998-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -241,7 +352,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.424067-07:00"
+    created: "2025-09-26T08:10:03.607603-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -272,7 +383,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.436714-07:00"
+    created: "2025-09-26T08:10:03.621643-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -303,7 +414,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.42221-07:00"
+    created: "2025-09-26T08:10:03.604465-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -334,7 +445,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.420027-07:00"
+    created: "2025-09-26T08:10:03.602097-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -365,7 +476,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.418329-07:00"
+    created: "2025-09-26T08:10:03.600195-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -396,7 +507,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-25T15:28:28.416601-07:00"
+    created: "2025-09-26T08:10:03.597828-07:00"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -425,4 +536,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-25T15:28:28.410326-07:00"
+generated: "2025-09-26T08:10:03.587842-07:00"
