🚀 Release ai-compare v0.1.349
- Automated version bump: patch
- Chart: ai-compare
- Previous version: 0.1.348
- New version: 0.1.349

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -6,7 +6,41 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.588828-07:00"
+    created: "2025-09-26T15:32:13.65104969Z"
+    description: SUSE AI Compare - Enterprise AI response comparison platform with
+      comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
+      chat interface. Built with SUSE-hardened container images, GPU support, and
+      integrated security monitoring.
+    digest: c71bfedf563f9a3bd958b3f8d23bb7ea56cf23936d2afcde5f13ade7c0a3807c
+    home: https://www.suse.com/products/ai/
+    icon: https://www.suse.com/assets/img/suse-black-logo-green.svg
+    keywords:
+    - ai
+    - llm
+    - ollama
+    - machine-learning
+    - opentelemetry
+    - observability
+    - demo
+    - comparison
+    - suse
+    - enterprise
+    maintainers:
+    - email: ai-team@suse.com
+      name: SUSE AI Team
+    name: ai-compare
+    sources:
+    - https://github.com/wiredquill/ai-demos
+    type: application
+    urls:
+    - ai-compare-0.1.349.tgz
+    version: 0.1.349
+  - annotations:
+      category: AI/ML
+      licenses: MIT
+    apiVersion: v2
+    appVersion: latest
+    created: "2025-09-26T15:32:13.650025919Z"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -40,7 +74,7 @@ entries:
       licenses: MIT
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.590657-07:00"
+    created: "2025-09-26T15:32:13.652041652Z"
     description: SUSE AI Compare - Enterprise AI response comparison platform with
       comprehensive observability. Features Ollama, Open WebUI, pipelines, and custom
       chat interface. Built with SUSE-hardened container images, GPU support, and
@@ -77,7 +111,7 @@ entries:
       opentelemetry.io/instrumented: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.591607-07:00"
+    created: "2025-09-26T15:32:13.654545576Z"
     description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
       AI response comparison platform. Features comprehensive GenAI telemetry, token-level
       cost tracking, model performance monitoring, and deep integration with SUSE
@@ -117,7 +151,7 @@ entries:
       opentelemetry.io/instrumented: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.593082-07:00"
+    created: "2025-09-26T15:32:13.656752785Z"
     description: SUSE AI Compare OpenTelemetry Edition - Advanced observability-focused
       AI response comparison platform. Features comprehensive GenAI telemetry, token-level
       cost tracking, model performance monitoring, and deep integration with SUSE
@@ -158,7 +192,7 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.594141-07:00"
+    created: "2025-09-26T15:32:13.658669493Z"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
@@ -195,7 +229,7 @@ entries:
       suse.com/certified: "true"
     apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.595249-07:00"
+    created: "2025-09-26T15:32:13.660728196Z"
     description: SUSE AI Compare SUSE Edition - Enterprise AI response comparison
       platform optimized for SUSE environments. Features SUSE BCI images, native SUSE
       Observability integration, NeuVector security demos, and full SUSE cloud-native
@@ -228,7 +262,7 @@ entries:
   suse-ai-hr-assistant:
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.618826-07:00"
+    created: "2025-09-26T15:32:13.688881688Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -259,7 +293,7 @@ entries:
     version: 0.2.15
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.615755-07:00"
+    created: "2025-09-26T15:32:13.685947882Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -290,7 +324,7 @@ entries:
     version: 0.2.14
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.612304-07:00"
+    created: "2025-09-26T15:32:13.682010073Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -321,7 +355,7 @@ entries:
     version: 0.2.12
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.609998-07:00"
+    created: "2025-09-26T15:32:13.679827818Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -352,7 +386,7 @@ entries:
     version: 0.2.10
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.607603-07:00"
+    created: "2025-09-26T15:32:13.675903011Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -383,7 +417,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.621643-07:00"
+    created: "2025-09-26T15:32:13.690805158Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -414,7 +448,7 @@ entries:
     version: 0.2.1
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.604465-07:00"
+    created: "2025-09-26T15:32:13.672440759Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -445,7 +479,7 @@ entries:
     version: 0.1.6
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.602097-07:00"
+    created: "2025-09-26T15:32:13.668662298Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -476,7 +510,7 @@ entries:
     version: 0.1.5
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.600195-07:00"
+    created: "2025-09-26T15:32:13.666792397Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -507,7 +541,7 @@ entries:
     version: 0.1.4
   - apiVersion: v2
     appVersion: latest
-    created: "2025-09-26T08:10:03.597828-07:00"
+    created: "2025-09-26T15:32:13.664916005Z"
     dependencies:
     - condition: ollama.enabled
       name: ollama
@@ -536,4 +570,4 @@ entries:
     urls:
     - suse-ai-hr-assistant-0.1.3.tgz
     version: 0.1.3
-generated: "2025-09-26T08:10:03.587842-07:00"
+generated: "2025-09-26T15:32:13.648851748Z"
